--- a/app/globals.css
+++ b/app/globals.css
@@ -23,4 +23,13 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #F0FDF4;
+}
+
+input {
+  color: black !important;
+}
+
+textarea{
+  color: black !important;
 }
